<resources>
    <string name="app_name">Book Store App</string>
    <string name="editor_activity_title">Add a Book</string>
    <!-- Menu Titles-->
    <string name="delete_all_books">Delete all Books</string>
    <string name="save_book">Save</string>
    <!-- Edit Text Hints for EditorActivity-->
    <string name="book_name">* Book Name</string>
    <string name="price">* Price</string>
    <string name="quantity">* Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <!--Toast Messages-->
    <string name="saving_error">Error with saving book.</string>
    <string name="saved_with_id">Book saved with row id: </string>
    <string name="required_fields">Please fill out all required fields.</string>
    <string name="unknown">unknown</string>
</resources>
